--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-  "name": "react-demo-admin",
-  "type": "module",
-  "version": "0.0.0",
+  "name": "mokainsign",
   "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "packageManager": "pnpm@10.4.1",
   "scripts": {
-    "dev": "vite --mode dev",
-    "st": "vite --mode st",
-    "build": "tsc -b && vite build --mode prod",
-    "preview": "vite preview",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "preview": "vite preview"
+  },
+  "engines": {
+    "node": ">=20",
+    "pnpm": ">=10"
   },
   "dependencies": {
-    "antd": "^5.22.2",
+    "antd": "^5.24.1",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.1.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.14.0",
-    "@eslint-react/eslint-plugin": "^1.23.2",
-    "@types/node": "^22.10.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^9.13.0",
-    "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "@eslint/js": "^9.19.0",
+    "@types/node": "^22.13.4",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "boxen": "^8.0.1",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "globals": "^15.14.0",
+    "gradient-string": "^3.0.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.22.0",
+    "vite": "^6.1.0",
+    "vite-plugin-remove-console": "^2.2.0"
   }
 }
