增加自动导入插件

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pnpm": ">=10"
   },
   "dependencies": {
+    "ahooks": "^3.8.4",
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@iconify/json": "^2.2.307",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -36,6 +38,8 @@
     "gradient-string": "^3.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
+    "unplugin-auto-import": "^19.1.0",
+    "unplugin-icons": "^22.0.0",
     "vite": "^6.1.0",
     "vite-plugin-remove-console": "^2.2.0"
   }
