--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ VITE_BASE_URL=/
 
 # 应用的标题
 VITE_APP_TITLE='MokaInsign'
+
+# 自动导入图标的前缀
+VITE_ICON_PREFIX='icon'
+
+# 本地图标集合名
+VITE_ICON_LOCAL_PREFIX='local'
