--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "pnpm": ">=10"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
     "ahooks": "^3.8.4",
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.5"
+    "react-router": "^7.1.5",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@iconify/json": "^2.2.307",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
