--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-router": "^7.1.5",
     "tailwindcss": "^4.0.6"
   },
@@ -31,6 +33,7 @@
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/node": "^22.13.4",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -46,5 +49,13 @@
     "unplugin-icons": "^22.0.0",
     "vite": "^6.1.0",
     "vite-plugin-remove-console": "^2.2.0"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ],
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
