--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "mokainsign",
-  "private": true,
-  "version": "1.0.0",
   "type": "module",
+  "version": "1.0.0",
+  "private": true,
   "packageManager": "pnpm@10.4.1",
+  "engines": {
+    "node": ">=20",
+    "pnpm": ">=10"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-  },
-  "engines": {
-    "node": ">=20",
-    "pnpm": ">=10"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
@@ -25,26 +25,24 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-router": "^7.1.5",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@antfu/eslint-config": "^4.3.0",
     "@iconify/json": "^2.2.307",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/node": "^22.13.4",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "boxen": "^8.0.1",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
+    "eslint": "^9.20.1",
     "gradient-string": "^3.0.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
     "unplugin-auto-import": "^19.1.0",
     "unplugin-icons": "^22.0.0",
     "vite": "^6.1.0",
