--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-error-boundary": "^5.0.0",
     "react-router": "^7.1.5",
     "tailwindcss": "^4.0.6",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "zustand-x": "^6.1.0"
   },
   "devDependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
