--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -47,6 +48,8 @@
     "unplugin-auto-import": "^19.1.0",
     "unplugin-icons": "^22.0.0",
     "vite": "^6.1.0",
+    "vite-bundle-visualizer": "^1.2.1",
+    "vite-plugin-compression2": "^1.3.3",
     "vite-plugin-remove-console": "^2.2.0"
   },
   "pnpm": {
