--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@iconify/json": "^2.2.307",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@tailwindcss/vite": "^4.0.7",
     "@types/node": "^22.13.4",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.10",
@@ -43,8 +42,8 @@
     "boxen": "^8.0.1",
     "eslint": "^9.20.1",
     "gradient-string": "^3.0.0",
-    "tailwindcss": "^4.0.7",
     "typescript": "~5.7.2",
+    "unocss": "^66.0.0",
     "unplugin-auto-import": "^19.1.0",
     "unplugin-icons": "^22.0.0",
     "vite": "^6.1.0",
