格式化配置

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "formulahendry.auto-rename-tag",
     "mikestead.dotenv",
     "naumovs.color-highlight",
-    "pkief.material-icon-theme"
+    "pkief.material-icon-theme",
+    "editorconfig.editorconfig"
   ]
 }
