--- a/package.json
+++ b/package.json
@@ -31,16 +31,22 @@
   "devDependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@antfu/eslint-config": "^4.3.0",
+    "@eslint-react/eslint-plugin": "^1.28.0",
     "@iconify/json": "^2.2.307",
+    "@prettier/plugin-xml": "^3.4.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/node": "^22.13.4",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@unocss/eslint-plugin": "66.1.0-beta.2",
     "@vitejs/plugin-react": "^4.3.4",
     "boxen": "^8.0.1",
     "eslint": "^9.20.1",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "gradient-string": "^3.0.0",
     "typescript": "~5.7.2",
     "unocss": "^66.0.0",
