--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@antfu/eslint-config": "^4.3.0",
     "@eslint-react/eslint-plugin": "^1.28.0",
+    "@iconify-json/lucide": "^1.2.26",
     "@iconify/json": "^2.2.307",
+    "@iconify/utils": "^2.3.0",
     "@prettier/plugin-xml": "^3.4.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
