--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
-    "react-router": "^7.1.5",
+    "react-router-dom": "^6.29.0",
     "zustand": "^5.0.3",
     "zustand-x": "^6.1.0"
   },
