--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "gradient-string": "^3.0.0",
+    "less": "^4.2.2",
     "typescript": "~5.7.2",
     "unocss": "^66.0.0",
     "unplugin-auto-import": "^19.1.0",
