--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vite": "^6.1.0",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-plugin-compression2": "^1.3.3",
+    "vite-plugin-qiankun-lite": "^1.2.0",
     "vite-plugin-remove-console": "^2.2.0"
   },
   "pnpm": {
