--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "keepalive-for-react": "^4.0.2",
+    "keepalive-for-react-router": "1",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
