--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@prettier/plugin-xml": "^3.4.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.13.4",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.10",
