--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@unocss/eslint-plugin": "66.1.0-beta.2",
     "@vitejs/plugin-react": "^4.3.4",
     "boxen": "^8.0.1",
@@ -54,6 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gradient-string": "^3.0.0",
     "less": "^4.2.2",
+    "shiki": "^2.5.0",
     "typescript": "~5.7.2",
     "unocss": "^66.0.0",
     "unplugin-auto-import": "^19.1.0",
