--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-community": "^33.2.4",
+    "ag-grid-react": "^33.2.4",
     "ahooks": "^3.8.4",
     "antd": "^5.24.1",
     "axios": "^1.7.9",
