--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 VITE_BASE_URL=/
 
 # 应用的标题
-VITE_APP_TITLE='MJ-Insign'
+VITE_APP_TITLE='InsightX'
 
 # 是否开启版本更新提醒
 VITE_AUTOMATICALLY_DETECT_UPDATE='Y'
