--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "keepalive-for-react": "^4.0.2",
     "keepalive-for-react-router": "1",
     "lodash-es": "^4.17.21",
+    "motion": "^12.11.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
