--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-dom": "^19.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@unocss/eslint-plugin": "66.1.0-beta.2",
+    "@unocss/preset-legacy-compat": "^66.1.4",
     "@vitejs/plugin-react": "^4.3.4",
     "boxen": "^8.0.1",
     "eslint": "^9.20.1",
