--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "echarts": "^5.6.0",
     "keepalive-for-react": "^4.0.2",
     "keepalive-for-react-router": "1",
     "lodash-es": "^4.17.21",
